# graphics

./: tags
8sym/src/: main.c
asg02/include/: Coordinate.h  main.h
asg02/src/: Coordinate.c
bresenham/src/: main.c
circle/: CMakeLists.txt
circle/src/: main.c
cyprus_beak/src/: main.c
halftoning/: CMakeLists.txt  a.out  readme.txt  run
halftoning/include/: main.h
halftoning/src/: halftoning.c  main.c  memory  memory.c
line_clip/src/: main.c
projection/: CMakeLists.txt
projection/include/: 8sym.h
projection/src/: draw3d.c  main.c  rotation.c
projection_2/: CMakeLists.txt  PlyShade.c  a.out  run
projection_2/include/: draw3d.h  main.h  ply_handling.h  rotation.h  types.h
projection_2/src/: gl.c  main.c  ply_handling.c  projection.1.c
rotate/: CMakeLists.txt  run  tags
rotate/include/: main.h
rotate/src/: 8sym.c  main.c  rotation.c
skeleton/: CMakeLists.txt
skeleton/include/: main.h
skeleton/include/glad/: glad.h
skeleton/src/: glad.c  main.c
